update class BinaryTree and min-heap